# expensereport-refactor-kata

./: README-reedhedges.md  README-reedhedges.txt  README.md
expensereport-csharp/: .gitignore  RefactoringResources.md
expensereport-csharp/expensereport-csharp/: BreakfastExpense.cs  CarRentalExpense.cs  Class1.cs  DinnerExpense.cs  Expense.cs  ExpenseFormatter.cs  ExpenseRepository.cs  LunchExpense.cs  expensereport-csharp.csproj
expensereport-csharp/expensereport-csharp/ExpenseTypes/: BreakfastExpense.cs  CarRentalExpense.cs  (+3 more)
expensereport-csharp/expensereport-ut/: BaseExpenseTest.cs  ExpenseReportFake.cs  Tests.ExpenseReport_PrintReport_DoNotOverExpenseCarRental.approved.txt  Tests.ExpenseReport_PrintReport_DoNotOverExpenseCarRental.received.txt  Tests.ExpenseReport_PrintReport_EmptyList.approved.txt  Tests.ExpenseReport_PrintReport_OutPutNItems.approved.txt  Tests.ExpenseReport_PrintReport_OutPutNItems.received.txt  Tests.ExpenseReport_PrintReport_OverExpenseBreakfast.approved.txt  Tests.ExpenseReport_PrintReport_OverExpenseDinner.approved.txt  Tests.ExpenseReport_PrintReport_OverExpenseLunch.approved.txt  UnitTest1.cs  expensereport-ut.csproj
expensereport-cxx/: .gitignore  CMakeLists.txt  ExpenseReport.cpp  ExpenseReport.h  README-reedhedges.md
expensereport-cxx/solution1/: CMakeLists.txt  ExpenseReport.cpp  ExpenseReport.h
expensereport-cxx/solution2/: CMakeLists.txt  ExpenseReport.cpp  ExpenseReport.h
expensereport-cxx/solution3/: ExpenseReport.h
expensereport-cxx/solution4/: ExpenseReport.h
expensereport-cxx/solution5/: CMakeLists.txt  ExpenseReport.h
expensereport-cxx/tests/: ApprovalTests.hpp  CMakeLists.txt  expensereport-all-tests.Empty.approved.txt  expensereport-all-tests.EmptyVector.approved.txt  expensereport-all-tests.Several.approved.txt  expensereport-all-tests.Several_WithRelAmounts.approved.txt  expensereport-all-tests.cpp
expensereport-java/: README.md  pom.xml
(+28 files in other folders)
