cmake_minimum_required(VERSION 3.18)
project(ExpenseReportKata CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
enable_testing()
set(KATA_SOLUTION "solution1" CACHE STRING "Build and test solution1/ or solution2/")
set_property(CACHE KATA_SOLUTION PROPERTY STRINGS solution1 solution2)
set(KATA_SOLUTION_DIR ${CMAKE_SOURCE_DIR}/${KATA_SOLUTION})
message(STATUS "Using code from \"${KATA_SOLUTION}\" (${KATA_SOLUTION_DIR}")
add_subdirectory(${KATA_SOLUTION})
add_subdirectory(tests)
